--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,40 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <title>Spotify</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-Premium Discover Help Download
+  <nav>
+    <img src="./images/spotify-logo.png">
+    <ul>
+      <li>Premium</li>
+      <li>Discover</li>
+      <li>Help</li>
+      <li>Download</li>
+    </ul>
+    </nav>
 
-Music for everyone.
-Spotify is now free on mobile, tablet and computer.
-Listen to the right music, wherever you are.
+<div class="headerSpacer"></div>
 
-What’s on Spotify?
+  <header>
+    <h1>Music for everyone.</h1>
+      <h3>Spotify is now free on mobile, tablet and computer.<br>
+          Listen to the right music, wherever you are.
+      </h3>
+  </header>
 
-Millions of Songs
-There are millions of
-songs on Spotify
+  <section id="whatsOnSpotify">
+<h2>What’s on Spotify?</h2>
+<hr>
 
-HD Music
-Listen to music as if you
-were listening live
+<article id="rightFix">
+    <img src="./images/devices-icon.png" width="125px">
+    <h3>Stream Everywhere</h3>
+    <h4>Stream music on your<br>
+    smartphone, tablet or<br>
+    computer</h4>
+  </article>
+<article id="centerFix">
+  <img src="./images/high-quality-icon.png" width="125px">
+  <h3>HD Music</h3>
+  <h4>Listen to music as if you<br>
+  were listening live</h4>
+</article>
+<article>
+    <img src="./images/music-icon.png" width="125px">
+    <h3>Millions of Songs</h3>
+    <h4>There are millions of<br>
+    songs on Spotify</h4>
+  </article>
+</section>
 
-Stream Everywhere
-Stream music on your
-smartphone, tablet or
-computer
-
-It’s as yeezy as Kanye West.
-Search
-Know what you want to listen to?
-Just search and hit play.
-Browse
-Check out the latest charts,
+<section id="kanye">
+  <img src="./images/spotify-icon-white.png" width="100px;">
+<h2>It’s as yeezy as Kanye West.</h2>
+<h3>Search</h3>
+<h5>Know what you want to listen to?
+Just search and hit play.</h5>
+<h3>Browse</h3>
+<h4>Check out the latest charts,
 brand new releases and great
-playlists for right now.
-Discover
-Enjoy new music every Monday
+playlists for right now.</h4>
+<h3>Discover</h3>
+<h4>Enjoy new music every Monday
 with your own personal playlist.
-Or sit back and enjoy Radio.
+Or sit back and enjoy Radio.</h4>
+</section>
 </body>
 </html>
